--- a/contact.html
+++ b/contact.html
@@ -222,14 +222,14 @@
       <section class="contact-info">
         <h3>Get in Touch</h3>
         <p><strong>Address:</strong> 131 Ron Kolbus Private, Ottawa, ON K1R 1C3</p>
-        <p><strong>Phone:</strong> <a href="tel:+16139301200">613-930-1200</a></p>
-        <p><strong>Email:</strong> <a href="mailto:mmhairstudiosinc@hotmail.com">mmhairstudiosinc@hotmail.com</a></p>
+        <p><strong>Phone:</strong> <a href="tel:+16136176192">613-617-6192</a></p>
+        <p><strong>Email:</strong> <a href="mailto:maximilian@mmhairstudios.com">maximilian@mmhairstudios.com</a></p>
         <p><strong>Business Hours:</strong> Mon - Sat: 9:00 AM - 7:00 PM, Sun: Closed</p>
       </section>
 
       <section class="contact-form">
         <h3>Send Us a Message</h3>
-        <form action="mailto:mmhairstudiosinc@hotmail.com" method="post" enctype="text/plain">
+        <form action="mailto:maximilian@mmhairstudios.com" method="post" enctype="text/plain">
           <label for="name">Name</label>
           <input type="text" id="name" name="Name" required />
 
@@ -255,9 +255,10 @@
     </main>
 
     <footer>
-      <p>MM HAIR STUDIOS INC. | 131 Ron Kolbus Private, Ottawa, ON K1R 1C3 | Phone: 613-930-1200 | Email: <a href="mailto:mmhairstudiosinc@hotmail.com">mmhairstudiosinc@hotmail.com</a></p>
+      <p>MM HAIR STUDIOS INC. | 131 Ron Kolbus Private, Ottawa, ON K1R 1C3 | Phone: 613-617-6192 | Email: <a href="mailto:maximilian@mmhairstudios.com">maximilian@mmhairstudios.com</a></p>
       <p>&copy; 2025 MM HAIR STUDIOS INC. All rights reserved.</p>
     </footer>
   </div>
 </body>
 </html>
+
