--- a/faq.html
+++ b/faq.html
@@ -187,7 +187,7 @@
     </main>
 
     <footer>
-      <p>MM HAIR STUDIOS INC. | 131 Ron Kolbus Private, Ottawa, ON K1R 1C3 | Phone: 613-930-1200 | Email: <a href="mailto:mmhairstudiosinc@hotmail.com">mmhairstudiosinc@hotmail.com</a></p>
+      <p>MM HAIR STUDIOS INC. | 131 Ron Kolbus Private, Ottawa, ON K1R 1C3 | Phone: 613-617-6192 | Email: <a href="mailto:maximilian@mmhairstudios.com">maximilian@mmhairstudios.com</a></p>
       <p>&copy; 2025 MM HAIR STUDIOS INC. All rights reserved. | <a href="faq.html">FAQ</a> | <a href="policy.html">Policies</a> | <a href="terms.html">Terms</a></p>
     </footer>
   </div>
@@ -205,3 +205,4 @@
   </script>
 </body>
 </html>
+
