--- a/terms.html
+++ b/terms.html
@@ -182,16 +182,17 @@
         <p>
           131 Ron Kolbus Private,<br />
           Ottawa, ON K1R 1C3<br />
-          Phone: 613-930-1200<br />
-          Email: <a href="mailto:mmhairstudiosinc@hotmail.com">mmhairstudiosinc@hotmail.com</a>
+          Phone: 613-617-6192<br />
+          Email: <a href="mailto:maximilian@mmhairstudios.com">maximilian@mmhairstudios.com</a>
         </p>
       </section>
     </main>
 
     <footer>
-      <p>MM HAIR STUDIOS INC. | 131 Ron Kolbus Private, Ottawa, ON K1R 1C3 | Phone: 613-930-1200 | Email: <a href="mailto:mmhairstudiosinc@hotmail.com">mmhairstudiosinc@hotmail.com</a></p>
+      <p>MM HAIR STUDIOS INC. | 131 Ron Kolbus Private, Ottawa, ON K1R 1C3 | Phone: 613-617-6192 | Email: <a href="mailto:maximilian@mmhairstudios.com">maximilian@mmhairstudios.com</a></p>
       <p>&copy; 2025 MM HAIR STUDIOS INC. All rights reserved. | <a href="faq.html">FAQ</a> | <a href="policy.html">Policies</a> | <a href="terms.html">Terms</a></p>
     </footer>
   </div>
 </body>
 </html>
+
