--- a/index.html
+++ b/index.html
@@ -170,7 +170,12 @@
   <div class="overlay">
 
     <header>
-      <img src="https://via.placeholder.com/60x60?text=Logo" alt="MM Hair Studios Logo" />
+      <img
+  src="https://i.postimg.cc/28ZWkQwc/Chat-GPT-Image-Aug-4-2025-07-49-07-PM.png"
+  alt="MM HAIR STUDIOS Logo"
+  class="logo"
+/>
+
       <div>
         <h1>MM HAIR STUDIOS INC.</h1>
         <p>Expert Hair Extensions & Coloring</p>
@@ -255,4 +260,5 @@
 
 </body>
 </html>
+
 
