--- a/index.html
+++ b/index.html
@@ -24,10 +24,15 @@
       padding: 15px 20px;
       display: flex;
       align-items: center;
+      position: relative; /* needed for absolute positioning of logo */
     }
-    header img {
+    /* Logo positioned top-right */
+    .logo {
+      position: absolute;
+      top: 10px;
+      right: 10px;
       height: 60px;
-      margin-right: 15px;
+      z-index: 10;
     }
     header h1 {
       margin: 0;
@@ -171,11 +176,10 @@
 
     <header>
       <img
-  src="https://i.postimg.cc/28ZWkQwc/Chat-GPT-Image-Aug-4-2025-07-49-07-PM.png"
-  alt="MM HAIR STUDIOS Logo"
-  class="logo"
-/>
-
+        src="https://i.imgur.com/2bcwtdA.png"
+        alt="MM HAIR STUDIOS Logo"
+        class="logo"
+      />
       <div>
         <h1>MM HAIR STUDIOS INC.</h1>
         <p>Expert Hair Extensions & Coloring</p>
@@ -214,7 +218,7 @@
             <p>Experience a friendly, relaxing atmosphere where your satisfaction is our priority.</p>
           </div>
           <div class="content-image">
-            <img src="https://images.unsplash.com/photo-1607082349566-1873422754c3?auto=format&fit=crop&w=600&q=80" alt="Hair Extension Service">
+            <img src="https://images.unsplash.com/photo-1607082349566-1873422754c3?auto=format&fit=crop&w=600&q=80" alt="Hair Extension Service" />
           </div>
         </div>
       </section>
@@ -260,5 +264,3 @@
 
 </body>
 </html>
-
-
