--- a/about.html
+++ b/about.html
@@ -136,8 +136,8 @@
 
     .btn-link {
       display: inline-block;
-      background-color: #d2691e; /* brighter chocolate orange */
-      color: #fff; /* white text */
+      background-color: #d2691e;
+      color: #fff;
       padding: 14px 30px;
       border-radius: 8px;
       font-weight: 700;
@@ -150,7 +150,7 @@
 
     .btn-link:hover,
     .btn-link:focus {
-      background-color: #b3540f; /* darker orange on hover */
+      background-color: #b3540f;
       transform: scale(1.05);
       outline: none;
     }
@@ -177,7 +177,10 @@
 <body>
   <div class="overlay">
     <header>
-      <img src="https://via.placeholder.com/60x60?text=Logo" alt="MM Hair Studios Logo" />
+      <img
+        src="https://i.imgur.com/2bcwtdA.png"
+        alt="MM Hair Studios Logo"
+      />
       <div>
         <h1>MM HAIR STUDIOS INC.</h1>
         <p>Expert Hair Extensions & Coloring</p>
@@ -233,4 +236,3 @@
   </div>
 </body>
 </html>
-
