--- a/booking.html
+++ b/booking.html
@@ -173,7 +173,7 @@
 <body>
   <div class="overlay">
     <header>
-      <img src="https://via.placeholder.com/60x60?text=Logo" alt="MM Hair Studios Logo" />
+      <img src="https://i.imgur.com/2bcwtdA.png" alt="MM Hair Studios Logo" />
       <h1>MM HAIR STUDIOS INC.</h1>
       <div class="phone-highlight">613-930-1200</div>
     </header>
@@ -229,4 +229,3 @@
   </div>
 </body>
 </html>
-
