--- a/contact.html
+++ b/contact.html
@@ -202,7 +202,7 @@
 <body>
   <div class="overlay">
     <header>
-      <img src="https://via.placeholder.com/60x60?text=Logo" alt="MM Hair Studios Logo" />
+      <img src="https://i.imgur.com/2bcwtdA.png" alt="MM Hair Studios Logo" />
       <h1>MM HAIR STUDIOS INC.</h1>
       <div class="phone-highlight">613-617-6192</div>
     </header>
@@ -261,5 +261,3 @@
   </div>
 </body>
 </html>
-
-
