--- a/faq.html
+++ b/faq.html
@@ -123,13 +123,14 @@
     footer a {
       color: #f0d8b7;
       text-decoration: none;
+      margin: 0 8px;
     }
   </style>
 </head>
 <body>
   <div class="overlay">
     <header>
-      <img src="https://via.placeholder.com/60x60?text=Logo" alt="MM Hair Studios Logo" />
+      <img src="https://i.imgur.com/2bcwtdA.png" alt="MM Hair Studios Logo" />
       <h1>MM HAIR STUDIOS INC.</h1>
       <div class="phone-highlight">613-930-1200</div>
     </header>
@@ -205,4 +206,3 @@
   </script>
 </body>
 </html>
-
