--- a/gallery.html
+++ b/gallery.html
@@ -67,6 +67,12 @@
       color: #f0c49b;
     }
 
+    nav a[aria-current="page"] {
+      color: #f0c49b;
+      font-weight: 700;
+      border-bottom: 2px solid #f0c49b;
+    }
+
     main {
       max-width: 1100px;
       margin: 30px auto 0;
@@ -157,7 +163,7 @@
 <body>
   <div class="overlay">
     <header>
-      <img src="https://via.placeholder.com/60x60?text=Logo" alt="MM Hair Studios Logo" />
+      <img src="https://i.imgur.com/2bcwtdA.png" alt="MM Hair Studios Logo" />
       <h1>MM HAIR STUDIOS INC.</h1>
     </header>
 
@@ -219,63 +225,7 @@
           <div class="caption">Salon Styling Tools</div>
         </div>
 
-        <!-- Repeat the images to fill up to 25 -->
-        <div class="gallery-item">
-          <img src="https://i.ibb.co/tMvSG6rx/1.jpg" alt="Hair Extension Style 1" />
-          <div class="caption">Hair Extension Style 1</div>
-        </div>
-        <div class="gallery-item">
-          <img src="https://i.ibb.co/0pZdFmxG/2.jpg" alt="Hair Extension Style 2" />
-          <div class="caption">Hair Extension Style 2</div>
-        </div>
-        <div class="gallery-item">
-          <img src="https://i.ibb.co/4g31Dbb5/3.jpg" alt="Hair Coloring Example" />
-          <div class="caption">Hair Coloring Example</div>
-        </div>
-        <div class="gallery-item">
-          <img src="https://i.ibb.co/k6KGC3Wd/4.jpg" alt="Hair Styling Session" />
-          <div class="caption">Hair Styling Session</div>
-        </div>
-        <div class="gallery-item">
-          <img src="https://i.ibb.co/wh5vvdZy/5.jpg" alt="Salon Hair Treatment" />
-          <div class="caption">Salon Hair Treatment</div>
-        </div>
-        <div class="gallery-item">
-          <img src="https://i.ibb.co/RGMqsxG1/6.jpg" alt="Professional Hair Care" />
-          <div class="caption">Professional Hair Care</div>
-        </div>
-        <div class="gallery-item">
-          <img src="https://i.ibb.co/0pCcn1fw/7.jpg" alt="Hair Extensions Close-up" />
-          <div class="caption">Hair Extensions Close-up</div>
-        </div>
-        <div class="gallery-item">
-          <img src="https://i.ibb.co/hJtnVg3g/8.jpg" alt="Hair Coloring Process" />
-          <div class="caption">Hair Coloring Process</div>
-        </div>
-        <div class="gallery-item">
-          <img src="https://i.ibb.co/vxzY02TV/9.jpg" alt="Salon Styling Tools" />
-          <div class="caption">Salon Styling Tools</div>
-        </div>
-        <div class="gallery-item">
-          <img src="https://i.ibb.co/tMvSG6rx/1.jpg" alt="Hair Extension Style 1" />
-          <div class="caption">Hair Extension Style 1</div>
-        </div>
-        <div class="gallery-item">
-          <img src="https://i.ibb.co/0pZdFmxG/2.jpg" alt="Hair Extension Style 2" />
-          <div class="caption">Hair Extension Style 2</div>
-        </div>
-        <div class="gallery-item">
-          <img src="https://i.ibb.co/4g31Dbb5/3.jpg" alt="Hair Coloring Example" />
-          <div class="caption">Hair Coloring Example</div>
-        </div>
-        <div class="gallery-item">
-          <img src="https://i.ibb.co/k6KGC3Wd/4.jpg" alt="Hair Styling Session" />
-          <div class="caption">Hair Styling Session</div>
-        </div>
-        <div class="gallery-item">
-          <img src="https://i.ibb.co/wh5vvdZy/5.jpg" alt="Salon Hair Treatment" />
-          <div class="caption">Salon Hair Treatment</div>
-        </div>
+        <!-- Repeat images up to 25 if needed -->
 
       </div>
     </main>
@@ -287,4 +237,3 @@
   </div>
 </body>
 </html>
-
