--- a/services.html
+++ b/services.html
@@ -202,7 +202,7 @@
 <body>
   <div class="overlay">
     <header>
-      <img src="https://via.placeholder.com/60x60?text=Logo" alt="MM Hair Studios Logo" />
+      <img src="https://i.imgur.com/2bcwtdA.png" alt="MM Hair Studios Logo" />
       <h1>MM HAIR STUDIOS INC.</h1>
     </header>
 
@@ -299,4 +299,3 @@
   </div>
 </body>
 </html>
-
