--- a/index.html
+++ b/index.html
@@ -24,14 +24,10 @@
       padding: 15px 20px;
       display: flex;
       align-items: center;
-      position: relative; /* needed for absolute positioning of logo */
     }
-    /* Logo positioned top-right */
     .logo {
-      position: absolute;
-      top: 10px;
-      right: 10px;
       height: 60px;
+      margin-right: 15px;
       z-index: 10;
     }
     header h1 {
