--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
       padding: 15px 20px;
       display: flex;
       align-items: center;
+      gap: 15px; /* space between logo and text */
     }
     .logo {
       height: 60px;
-      margin-right: 15px;
-      z-index: 10;
+      flex-shrink: 0;
     }
     header h1 {
       margin: 0;
